--- a/logging-index/package.json
+++ b/logging-index/package.json
@@ -4,6 +4,7 @@
     "description": "Subpackage",
     "repository": "https://github.com/usmansharifkhan/semantic-release-monorepo-example",
     "release": {
+        "tagFormat": "logging-index-${version}",
         "plugins": [
             "@semantic-release/commit-analyzer",
             "@semantic-release/release-notes-generator",
